--- a/starter kit/package.json
+++ b/starter kit/package.json
@@ -17,8 +17,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
+    "css-loader": "^0.28.0",
     "nodemon": "^1.11.0",
     "react-hot-loader": "^3.0.0-beta.6",
+    "style-loader": "^0.16.1",
     "webpack": "^1.13.3",
     "webpack-dev-middleware": "^1.8.4",
     "webpack-dev-server": "^1.16.2",
