--- a/starter kit/package.json
+++ b/starter kit/package.json
@@ -5,8 +5,14 @@
   "main": "index.js",
   "dependencies": {
     "babel-core": "^6.18.2",
+    "body-parser": "^1.17.1",
+    "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
+    "express-session": "^1.15.2",
     "lodash": "^4.16.6",
+    "mongoose": "^4.9.2",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^3.0.0"
