--- a/starter kit/package.json
+++ b/starter kit/package.json
@@ -4,6 +4,7 @@
   "description": "Test",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.16.0",
     "babel-core": "^6.18.2",
     "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
@@ -14,8 +15,14 @@
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "react": "^15.3.2",
+    "react-addons-update": "^15.4.2",
     "react-dom": "^15.3.2",
-    "react-router": "^3.0.0"
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.3",
+    "redux": "^3.6.0",
+    "redux-actions": "^2.0.1",
+    "redux-promise-middleware": "^4.2.0",
+    "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
