--- a/starter kit/package.json
+++ b/starter kit/package.json
@@ -14,6 +14,7 @@
     "mongoose": "^4.9.2",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-local": "^1.0.0",
     "react": "^15.3.2",
     "react-addons-update": "^15.4.2",
     "react-dom": "^15.3.2",
