--- a/starter kit/package.json
+++ b/starter kit/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.16.0",
     "babel-core": "^6.18.2",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.17.1",
     "connect-mongo": "^1.3.2",
     "express": "^4.14.0",
