--- a/chatApplication/package.json
+++ b/chatApplication/package.json
@@ -17,6 +17,7 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.2",
+    "express-validator": "^3.1.3",
     "mongoose": "^4.9.3",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
